# hillshade-generator

./: .gitignore  AGENTS.md  CONTRIBUTING.md  README.md  ROADMAP.md  install.sh  pyproject.toml
.github/workflows/: release.yml
docs/: ARCHITECTURE.md  submission.md
hillgen/: __init__.py  cache.py  cache_s3.py  cli.py  contribute_broker.py  viewer.py
hillgen.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
hillgen/geo/: __init__.py  geocoder.py
hillgen/pipeline/: __init__.py  auto_exag.py  hillshade.py  integrity.py  orchestrator.py  packager.py  reproject.py  style.py  tiler.py
hillgen/sources/: __init__.py  base.py  copernicus_dem.py  igic_indiana_lidar.py  isgs_ilhmp.py  nps_sfm_rainier.py  usgs_3dep.py  wi_dnr_lidar.py
hillgen/themes/: __init__.py  registry.py
hillgen/themes/ramps/: alpine-glacier.txt  aurora.txt  cool-elev.txt  cool.txt  dark.txt  desert-sun.txt  forest-canopy.txt  gray.txt  infrared-crater-focus.txt  infrared-hi-bias.txt  infrared-lo-bias.txt  infrared-mid-bias.txt  infrared-valley-focus.txt  infrared.txt  light.txt  magma.txt  ocean-depth.txt  sunset-ridge-lo-bias.txt  sunset-ridge.txt  tactical.txt  terrain.txt  topo-classic.txt  toxic.txt  vivid-elev.txt  vivid.txt  volcanic-ash.txt
infra/broker/: README.md  allowlist.example.json  handler.py  requirements.txt  template.yaml
scripts/: compare_pmtiles.py  deploy-web.sh  setup-gallery-iam.sh
tests/: test_contribute_broker.py  test_igic_indiana_lidar.py  test_wi_dnr_lidar.py
web/: catalog.json  contributors.html  gallery.html  index.html
