[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hillgen"
version = "0.1.0"
description = "Generate beautiful, styled hillshade maps from real-world terrain data"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Eric Muehlstein", email = "muehlbucks@gmail.com"}
]
dependencies = [
    "click>=8.0",
    "requests>=2.28.0",
    "numpy>=1.24.0",
    "rasterio>=1.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[project.scripts]
hillgen = "hillgen.cli:cli"

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
hillgen = ["themes/ramps/*.txt"]

[tool.pytest.ini_options]
testpaths = ["tests"]
