[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hillgen"
version = "0.1.0"
description = "Generate stylized hillshade and relief map tiles from DEM data"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Eric Muehlstein", email = "muehlbucks@gmail.com"}
]
keywords = ["hillshade", "DEM", "terrain", "maps", "GIS", "tiles", "PMTiles", "MBTiles"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: GIS",
]

[project.urls]
Homepage = "https://scriptedrelief.com"
Repository = "https://github.com/emuehlstein/hillshade-generator"
"Bug Tracker" = "https://github.com/emuehlstein/hillshade-generator/issues"

dependencies = [
    "click>=8.0",
    "requests>=2.28.0",
    "numpy>=1.24.0",
    "rasterio>=1.3.0",
    "pyproj>=3.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[project.scripts]
hillgen = "hillgen.cli:cli"

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
hillgen = ["themes/ramps/*.txt"]

[tool.pytest.ini_options]
testpaths = ["tests"]
